// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Loaders Basic Usage renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    To use a default loader add 
    <Property
      value=".loader"
    />
    , 
    <Property
      value=".loader-default"
    />
     and 
    <Attribute
      data={true}
      name="loader"
    />
     to a div.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="loader"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Loaders Muted Loader renders 1`] = `
<Fragment>
  <h2
    id="muted-loader"
  >
    Muted loader
  </h2>
  <p>
    Use class 
    <Property
      value=".loader-muted"
    />
     to make the loader muted.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Loader
      id="test"
      muted={true}
      size="default"
      visible={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Loaders Sizes renders 1`] = `
<Fragment>
  <h2
    id="sizes"
  >
    Sizes
  </h2>
  <p>
    In addition to 
    <Property
      value=".loader-default"
    />
     you can use 
    <Property
      value=".loader-small"
    />
     and 
    <Property
      value=".loader-large"
    />
     to decrease or increase the size of the loader.
  </p>
  <h3>
    Small
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Loader
      size="small"
      visible={true}
    />
  </ComponentPreview>
  <h3>
    Large
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Loader
      size="large"
      visible={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Loaders Static Html renders 1`] = `
<Fragment>
  <h2
    id="static-html"
  >
    Static HTML
  </h2>
  <p>
    Using the attribute 
    <Attribute
      data={true}
      name="loader"
    />
     will append the following HTML to the element:
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <ul
      className="loader-icon"
    >
      <li />
      <li />
      <li />
    </ul>
  </ComponentPreview>
  <p>
    If you want to use the static HTML instead of the data-attribute, make sure to 
    <b>
      NOT
    </b>
     include the attribute 
    <Attribute
      data={true}
      name="loader"
    />
    .
  </p>
</Fragment>
`;

exports[`Documentation: Loaders renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use loaders to indicate to the user that your web application is loading.
  </p>
  <BasicUsage />
  <Sizes />
  <MutedLoader />
  <StaticHtml />
</DocContainer>
`;
